# wordclock

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md  index-c632f0400113e88c.css  index-d5fb56eaa0f5a322.css  index.html  package-lock.json  yew-word-clock-317665cf93d8b5f9.js  yew-word-clock-317665cf93d8b5f9_bg.wasm  yew-word-clock-a3331c52b8ab5ccf.js  yew-word-clock-a3331c52b8ab5ccf_bg.wasm  yew-wordclock-1e637e5dbf3a9c1.js  yew-wordclock-1e637e5dbf3a9c1_bg.wasm
.github/workflows/: ci.yml  publish-yew-strato.yml  publish-yew-to-ghpages.yml
examples/: on-terminal.rs
iced/: Cargo.toml
iced-wasm/: Cargo.toml  index.html
iced-wasm/src/: main.rs
pancurses/: Cargo.toml
pancurses/src/: main.rs
src/: lib.rs  main.rs  tests.rs
src/app/: app.component.spec.ts  app.module.ts
src/app/clock/: clock-dialect.ch-bern.ts  clock-dialect.type.ts  clock-router.component.html  clock-router.component.ts  clock.component.html  clock.component.scss  clock.component.spec.ts  clock.component.ts  clock.module.ts
yew/: Cargo.toml  README.md  Trunk4GhPages.toml  index.html  index.scss  manifest.json
yew/src/: app.rs  main.rs
