[package]
name = "iced-wasm-wordclock"
version = "0.1.0"
edition = "2021"

[dependencies]
wordclock = { path = "../" }
iced = { git = "https://github.com/iced-rs/iced.git", features = ["tokio", "debug"] }
time = { version = "0.3.5", features = ["local-offset"] }
iced_web = "0.4.0"
wasm-bindgen = "0.2.87"
