[package]
name = "iced-wordclock"
description = "Wordclock implemented in iced framework"
homepage = "https://github.com/almedso/wordclock-in-rust"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE-MIT"

[dependencies]
wordclock = { path = "../" }
iced = { version = "0.9", features = ["tokio", "debug"] }
time = { version = "0.3.5", features = ["local-offset"] }
