[package]
name = "yew-word-clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wordclock = { path = "../" }
yew = { version = "0.20" , features = [ "csr" ] }
# malvolio = { version = "0.4.1", features = [  ]}
time = { version = "0.3.5", features = ["local-offset"] }
chrono = "0.4.26"
